force-app/main/default/objects/ssot__RecordAlert__dlm/fields/ssot__RecordAlert_AccountId_map_Account_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__RecordAlert_AccountId_map_Account_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RecordAlert_AccountId_map_Account_Id_N_1</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>RecordAlert_AccountId_map_Account_Id_N_1</relationshipLabel>
    <relationshipName>RecordAlert_AccountId_map_Account_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>