force-app/main/default/objects/ssot__RecordAlert__dlm/fields/ssot__RecordAlertPriority__c.field-meta.xml
<CustomField>
    <fullName>ssot__RecordAlertPriority__c</fullName>
    <label>Record Alert Priority</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RecordAlertPriority</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>