force-app/main/default/objects/ssot__RecordAlert__dlm/fields/ssot__RecordAlertSeverity__c.field-meta.xml
<CustomField>
    <fullName>ssot__RecordAlertSeverity__c</fullName>
    <label>Record Alert Severity</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RecordAlertSeverity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>