force-app/main/default/objects/ssot__RecordAlert__dlm/fields/ssot__rel_1697761237758_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761237758_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RecordAlert_ReferenceContextId_map_F_rel</label>
    <referenceTo>ssot__FinancialAccount__dlm</referenceTo>
    <relationshipLabel>RecordAlert_ReferenceContextId_map_F_rel</relationshipLabel>
    <relationshipName>rel_1697761237758_end</relationshipName>
    <type>Lookup</type>
</CustomField>